--- a/style-START.css
+++ b/style-START.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
   font-family: "Lato", "Lucida Grande", "Lucida Sans Unicode", Tahoma,
-    Sans-Serif;
+  Sans-Serif;
   font-weight: normal;
   color: #272727;
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
@@ -28,7 +28,55 @@ h6 {
   font-size: 1.5em;
 }
 
+.codepan-logo{
+  width: 30px;
+  height: 30px;
+  margin-left: 5px;
+}
+
+.about__project{
+  height: 44px;
+  margin-left: 5px;
+}
+
 .pen {
   background: #1e1f26;
   height: 65px;
+  padding: 10px 5px;
+}
+
+.project__name{
+  font-size: 19.5px;
+  color: #fff;
+}
+
+.pen__author{
+  color: #9b9dad;
+  font-size: 13.5px;
+}
+
+.button--dirty{
+  background-color: #444857;
+  color: #ffffff;
+  padding: 10px 8px;
+  border-radius: 4px;
+  border: 3px solid #444857;
+  height: 44px;
+  margin-right: 6px;
+  vertical-align: middle;
+  font-size: 14px;
+}
+
+.avatar{
+  border-radius: 4px;
+}
+
+.fa {
+  color: #adafbc;
+  margin-right: 5px;
+}
+
+.fa-pencil {
+  color: #fff;
+  margin-left: 5px;
 }
