--- a/style-START.css
+++ b/style-START.css
@@ -71,12 +71,60 @@ h6 {
   border-radius: 4px;
 }
 
-.fa {
+.icon-header {
   color: #adafbc;
-  margin-right: 5px;
+  margin-right: 10px;
+  width: 10px;
+  height: 10px;
 }
 
 .fa-pencil {
   color: #fff;
   margin-left: 5px;
+}
+
+.fa-wheel{
+  color: #fff;
+  width: 10px;
+  height: 10px;
+}
+
+.fa-arrow-down{
+  color: #fff;
+}
+
+.editor__header{
+  background-color: #1A1C20;
+  padding: 5px 5px;
+}
+
+.editor__settings{
+  background-color: #444857;
+  width: 26px;
+  height: 20px;
+}
+
+.editor__number{
+  color: #34363e;
+}
+
+.editor{
+  background-color: #666;
+}
+
+.editor__code{
+  color: #1D1F23;
+  height: 360px;
+
+}
+
+.editor__heading{
+  color: #aaaebc;
+}
+
+.line__breaker{
+  width: 100%;
+  height: 17px;
+  border: 1px solid #000;
+  background-color: #333642;
 }
